Fix what the design change left behind
Three artifacts still described the abandoned two-formatter arrangement or
were never updated when it went away:

- The design doc claimed the flake's CLI was unaffected by the JDK 21
  hazard. There is no flake CLI. Replaced with what actually happened --
  no --add-exports was needed at 1.35.0 under Spotless 7.0.4.
- app/build.gradle said CI runs lintDebug and therefore misses the style
  checks. CI runs lint, and has since a79d29c9; the comment was already
  wrong when written and this branch widened it without noticing.
- The nvim guidance said the editor must run Spotless, which conform
  cannot do. The answer is that it should format Java with nothing.

Also records that ktlint's identical-looking two-pin arrangement was
rechecked and does hold -- its CLI and plugin share one jar, so there is
no shaded-versus-thin split to diverge across.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>